Made changes to Dockerfile to build jar, added tests