@@ -14,14 +14,12 @@ import org.junit.ClassRule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.junit4.SpringRunner;
 import org.testcontainers.containers.PostgreSQLContainer;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -30,7 +28,6 @@ import static org.junit.Assert.assertNotNull;
 
 @RunWith(SpringRunner.class)
 @SpringBootTest
-@AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 public class BalanceServiceIntegrationTest {
 
     @ClassRule
@@ -50,40 +47,47 @@ public class BalanceServiceIntegrationTest {
 
     @Test
     public void testGetBalancesForAccount() {
-        // Set up test data in the database using balanceRepository
         UUID accountId = UUID.randomUUID();
-        Balance balance1 = new Balance(UUID.randomUUID(), accountId, BigDecimal.valueOf(100.00), Currency.USD);
-        Balance balance2 = new Balance(UUID.randomUUID(), accountId,BigDecimal.valueOf(50.00), Currency.EUR);
+
+        Balance balance1 = new Balance(UUID.randomUUID(), accountId, BigDecimal.ZERO, Currency.USD);
+        Balance balance2 = new Balance(UUID.randomUUID(), accountId, BigDecimal.ZERO, Currency.EUR);
+
         balanceRepository.insert(balance1);
         balanceRepository.insert(balance2);
 
-        //balanceRepository.saveAll(Arrays.asList(balance1, balance2));
-
-        // Call the method to be tested
         List<BalanceResponse> balances = balanceService.getBalancesForAccount(accountId);
 
-        // Assert the results
         assertNotNull(balances);
         assertEquals(2, balances.size());
-        // Add more assertions as needed
+
+        assertEquals(BigDecimal.ZERO, balances.get(0).balance());
+        assertEquals(Currency.USD, balances.get(0).currency());
+
+        assertEquals(BigDecimal.ZERO, balances.get(1).balance());
+        assertEquals(Currency.EUR, balances.get(1).currency());
     }
 
     @Test
     public void testCreateBalancesForAccount() {
-        // Set up test data
         UUID accountId = UUID.randomUUID();
-        List<Currency> currencies = Arrays.asList(Currency.USD, Currency.EUR);
+        List<Currency> currencies = List.of(Currency.USD, Currency.EUR);
 
-        // Call the method to be tested
         balanceService.createBalancesForAccount(accountId, currencies);
 
-        // Retrieve the balances from the database using balanceRepository
         List<Balance> balances = balanceRepository.findByAccountId(accountId);
 
-        // Assert the results
         assertNotNull(balances);
         assertEquals(2, balances.size());
-        // Add more assertions as needed
+
+        assertNotNull(balances.get(0).getId());
+        assertEquals(accountId, balances.get(0).getAccountId());
+        assertEquals(BigDecimal.ZERO, balances.get(0).getBalance());
+        assertEquals(Currency.USD, balances.get(0).getCurrency());
+
+        assertNotNull(balances.get(1).getId());
+        assertEquals(accountId, balances.get(1).getAccountId());
+        assertEquals(BigDecimal.ZERO, balances.get(1).getBalance());
+        assertEquals(Currency.EUR, balances.get(1).getCurrency());
     }
 
     @Test
@@ -98,5 +102,15 @@ public class BalanceServiceIntegrationTest {
         assertEquals(BigDecimal.valueOf(50.00).setScale(2, RoundingMode.HALF_UP), newBalanceAmount);
     }
 
-    // Additional integration tests as needed for error cases, edge cases, etc.
+    @Test(expected = InvalidBalanceException.class)
+    public void throwsException() throws InvalidBalanceException {
+        UUID accountId = UUID.randomUUID();
+        Balance balance = new Balance(null, accountId, null, Currency.USD);
+        balanceRepository.insert(balance);
+        System.out.println(balanceRepository.findById(balance.getId()));
+        BigDecimal newBalanceAmount = balanceService.updateAccountBalance(accountId, BigDecimal.valueOf(50.00), Direction.OUT, Currency.USD);
+
+        assertNotNull(newBalanceAmount);
+        assertEquals(BigDecimal.valueOf(50.00).setScale(2, RoundingMode.HALF_UP), newBalanceAmount);
+    }
 }
